# dimensioning-system-for-a-schematic-equipment-drawing

./: CMakeLists.txt  main.cpp
dimensioning/: CMakeLists.txt  dimensioning.cpp
